src/tee/tee_internal_api/src/binding.rs

extern "C" {
    pub fn TEE_AllocatePersistentObjectEnumerator(
        objectEnumerator: *mut TEE_ObjectEnumHandle,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_FreePersistentObjectEnumerator(objectEnumerator: TEE_ObjectEnumHandle);
}
extern "C" {
    pub fn TEE_ResetPersistentObjectEnumerator(objectEnumerator: TEE_ObjectEnumHandle);
}
extern "C" {
    pub fn TEE_StartPersistentObjectEnumerator(
        objectEnumerator: TEE_ObjectEnumHandle,
        storageID: u32,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetNextPersistentObject(
        objectEnumerator: TEE_ObjectEnumHandle,
        objectInfo: *mut TEE_ObjectInfo,
        objectID: *mut ::std::os::raw::c_void,
        objectIDLen: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_ReadObjectData(
        object: TEE_ObjectHandle,
        buffer: *mut ::std::os::raw::c_void,
        size: usize,
        count: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_WriteObjectData(
        object: TEE_ObjectHandle,
        buffer: *mut ::std::os::raw::c_void,
        size: usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_TruncateObjectData(object: TEE_ObjectHandle, size: usize) -> TEE_Result;
}
extern "C" {
    pub fn TEE_SeekObjectData(
        object: TEE_ObjectHandle,
        offset: usize,
        whence: TEE_Whence,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_AllocateOperation(
        operation: *mut TEE_OperationHandle,
        algorithm: u32,
        mode: u32,
        maxKeySize: u32,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_FreeOperation(operation: TEE_OperationHandle);
}
extern "C" {
    pub fn TEE_GetOperationInfo(
        operation: TEE_OperationHandle,
        operationInfo: *mut TEE_OperationInfo,
    );
}
extern "C" {
    pub fn TEE_GetOperationInfoMultiple(
        operation: TEE_OperationHandle,
        operationInfoMultiple: *mut TEE_OperationInfoMultiple,
        operationSize: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_ResetOperation(operation: TEE_OperationHandle);
}
extern "C" {
    pub fn TEE_SetOperationKey(operation: TEE_OperationHandle, key: TEE_ObjectHandle)
        -> TEE_Result;
}
extern "C" {
    pub fn TEE_SetOperationKey2(
        operation: TEE_OperationHandle,
        key1: TEE_ObjectHandle,
        key2: TEE_ObjectHandle,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_CopyOperation(dstOperation: TEE_OperationHandle, srcOperation: TEE_OperationHandle);
}
extern "C" {
    pub fn TEE_IsAlgorithmSupported(algId: u32, element: u32) -> TEE_Result;
}
extern "C" {
    pub fn TEE_DigestUpdate(
        operation: TEE_OperationHandle,
        chunk: *mut ::std::os::raw::c_void,
        chunkSize: usize,
    );
}
extern "C" {
    pub fn TEE_DigestDoFinal(
        operation: TEE_OperationHandle,
        chunk: *mut ::std::os::raw::c_void,
        chunkLen: usize,
        hash: *mut ::std::os::raw::c_void,
        hashLen: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_CipherInit(
        operation: TEE_OperationHandle,
        IV: *mut ::std::os::raw::c_void,
        IVLen: usize,
    );
}
extern "C" {
    pub fn TEE_CipherUpdate(
        operation: TEE_OperationHandle,
        srcData: *mut ::std::os::raw::c_void,
        srcLen: usize,
        destData: *mut ::std::os::raw::c_void,
        destLen: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_CipherDoFinal(
        operation: TEE_OperationHandle,
        srcData: *mut ::std::os::raw::c_void,
        srcLen: usize,
        destData: *mut ::std::os::raw::c_void,
        destLen: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_MACInit(
        operation: TEE_OperationHandle,
        IV: *mut ::std::os::raw::c_void,
        IVLen: usize,
    );
}
extern "C" {
    pub fn TEE_MACUpdate(
        operation: TEE_OperationHandle,
        chunk: *mut ::std::os::raw::c_void,
        chunkSize: usize,
    );
}
extern "C" {
    pub fn TEE_MACComputeFinal(
        operation: TEE_OperationHandle,
        message: *mut ::std::os::raw::c_void,
        messageLen: usize,
        mac: *mut ::std::os::raw::c_void,
        macLen: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_MACCompareFinal(
        operation: TEE_OperationHandle,
        message: *mut ::std::os::raw::c_void,
        messageLen: usize,
        mac: *mut ::std::os::raw::c_void,
        macLen: usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_AEInit(
        operation: TEE_OperationHandle,
        nonce: *mut ::std::os::raw::c_void,
        nonceLen: usize,
        tagLen: u32,
        AADLen: usize,
        payloadLen: usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_AEUpdateAAD(
        operation: TEE_OperationHandle,
        AADdata: *mut ::std::os::raw::c_void,
        AADdataLen: usize,
    );
}
extern "C" {
    pub fn TEE_AEUpdate(
        operation: TEE_OperationHandle,
        srcData: *mut ::std::os::raw::c_void,
        srcLen: usize,
        destData: *mut ::std::os::raw::c_void,
        destLen: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_AEEncryptFinal(
        operation: TEE_OperationHandle,
        srcData: *mut ::std::os::raw::c_void,
        srcLen: usize,
        destData: *mut ::std::os::raw::c_void,
        destLen: *mut usize,
        tag: *mut ::std::os::raw::c_void,
        tagLen: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_AEDecryptFinal(
        operation: TEE_OperationHandle,
        srcData: *mut ::std::os::raw::c_void,
        srcLen: usize,
        destData: *mut ::std::os::raw::c_void,
        destLen: *mut usize,
        tag: *mut ::std::os::raw::c_void,
        tagLen: usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_AsymmetricEncrypt(
        operation: TEE_OperationHandle,
        params: *mut TEE_Attribute,
        paramCount: u32,
        srcData: *mut ::std::os::raw::c_void,
        srcLen: usize,
        destData: *mut ::std::os::raw::c_void,
        destLen: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_AsymmetricDecrypt(
        operation: TEE_OperationHandle,
        params: *mut TEE_Attribute,
        paramCount: u32,
        srcData: *mut ::std::os::raw::c_void,
        srcLen: usize,
        destData: *mut ::std::os::raw::c_void,
        destLen: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_AsymmetricSignDigest(
        operation: TEE_OperationHandle,
        params: *mut TEE_Attribute,
        paramCount: u32,
        digest: *mut ::std::os::raw::c_void,
        digestLen: usize,
        signature: *mut ::std::os::raw::c_void,
        signatureLen: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_AsymmetricVerifyDigest(
        operation: TEE_OperationHandle,
        params: *mut TEE_Attribute,
        paramCount: u32,
        digest: *mut ::std::os::raw::c_void,
        digestLen: usize,
        signature: *mut ::std::os::raw::c_void,
        signatureLen: usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_DeriveKey(
        operation: TEE_OperationHandle,
        params: *mut TEE_Attribute,
        paramCount: u32,
        derivedKey: TEE_ObjectHandle,
    );
}
extern "C" {
    pub fn TEE_GenerateRandom(randomBuffer: *mut ::std::os::raw::c_void, randomBufferLen: usize);
}
extern "C" {
    pub fn TEE_GetSystemTime(time: *mut TEE_Time);
}
extern "C" {
    pub fn TEE_Wait(timeout: u32) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetTAPersistentTime(time: *mut TEE_Time) -> TEE_Result;
}
extern "C" {
    pub fn TEE_SetTAPersistentTime(time: *mut TEE_Time) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetREETime(time: *mut TEE_Time);
}
extern "C" {
    pub fn TEE_BigIntFMMContextSizeInU32(modulusSizeInBits: usize) -> usize;
}
extern "C" {
    pub fn TEE_BigIntFMMSizeInU32(modulusSizeInBits: usize) -> usize;
}
extern "C" {
    pub fn TEE_BigIntInit(bigInt: *mut TEE_BigInt, len: usize);
}
extern "C" {
    pub fn TEE_BigIntInitFMMContext1(
        context: *mut TEE_BigIntFMMContext,
        len: usize,
        modulus: *mut TEE_BigInt,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_BigIntInitFMM(bigIntFMM: *mut TEE_BigIntFMM, len: usize);
}
extern "C" {
    pub fn TEE_BigIntConvertFromOctetString(
        dest: *mut TEE_BigInt,
        buffer: *mut u8,
        bufferLen: usize,
        sign: i32,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_BigIntConvertToOctetString(
        buffer: *mut ::std::os::raw::c_void,
        bufferLen: *mut usize,
        bigInt: *mut TEE_BigInt,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_BigIntConvertFromS32(dest: *mut TEE_BigInt, shortVal: i32);
}
extern "C" {
    pub fn TEE_BigIntConvertToS32(dest: *mut i32, src: *mut TEE_BigInt) -> TEE_Result;
}
extern "C" {
    pub fn TEE_BigIntCmp(op1: *mut TEE_BigInt, op2: *mut TEE_BigInt) -> i32;
}
extern "C" {
    pub fn TEE_BigIntCmpS32(op: *mut TEE_BigInt, shortVal: i32) -> i32;
}
extern "C" {
    pub fn TEE_BigIntShiftRight(dest: *mut TEE_BigInt, op: *mut TEE_BigInt, bits: usize);
}
extern "C" {
    pub fn TEE_BigIntGetBit(src: *mut TEE_BigInt, bitIndex: u32) -> bool;
}
extern "C" {
    pub fn TEE_BigIntGetBitCount(src: *mut TEE_BigInt) -> u32;
}
extern "C" {
    pub fn TEE_BigIntSetBit(op: *mut TEE_BigInt, bitIndex: u32, value: bool) -> TEE_Result;
}
extern "C" {
    pub fn TEE_BigIntAssign(dest: *mut TEE_BigInt, src: *mut TEE_BigInt) -> TEE_Result;
}
extern "C" {
    pub fn TEE_BigIntAbs(dest: *mut TEE_BigInt, src: *mut TEE_BigInt) -> TEE_Result;
}
extern "C" {
    pub fn TEE_BigIntAdd(dest: *mut TEE_BigInt, op1: *mut TEE_BigInt, op2: *mut TEE_BigInt);
}
extern "C" {
    pub fn TEE_BigIntSub(dest: *mut TEE_BigInt, op1: *mut TEE_BigInt, op2: *mut TEE_BigInt);
}
extern "C" {
    pub fn TEE_BigIntNeg(dest: *mut TEE_BigInt, op: *mut TEE_BigInt);
}
extern "C" {
    pub fn TEE_BigIntMul(dest: *mut TEE_BigInt, op1: *mut TEE_BigInt, op2: *mut TEE_BigInt);
}
extern "C" {
    pub fn TEE_BigIntSquare(dest: *mut TEE_BigInt, op: *mut TEE_BigInt);
}
extern "C" {
    pub fn TEE_BigIntDiv(
        dest_q: *mut TEE_BigInt,
        dest_r: *mut TEE_BigInt,
        op1: *mut TEE_BigInt,
        op2: *mut TEE_BigInt,
    );
}
extern "C" {
    pub fn TEE_BigIntMod(dest: *mut TEE_BigInt, op: *mut TEE_BigInt, n: *mut TEE_BigInt);
}
extern "C" {
    pub fn TEE_BigIntAddMod(
        dest: *mut TEE_BigInt,
        op1: *mut TEE_BigInt,
        op2: *mut TEE_BigInt,
        n: *mut TEE_BigInt,
    );
}
extern "C" {
    pub fn TEE_BigIntSubMod(
        dest: *mut TEE_BigInt,
        op1: *mut TEE_BigInt,
        op2: *mut TEE_BigInt,
        n: *mut TEE_BigInt,
    );
}
extern "C" {
    pub fn TEE_BigIntMulMod(
        dest: *mut TEE_BigInt,
        op1: *mut TEE_BigInt,
        op2: *mut TEE_BigInt,
        n: *mut TEE_BigInt,
    );
}
extern "C" {
    pub fn TEE_BigIntSquareMod(dest: *mut TEE_BigInt, op: *mut TEE_BigInt, n: *mut TEE_BigInt);
}
extern "C" {
    pub fn TEE_BigIntInvMod(dest: *mut TEE_BigInt, op: *mut TEE_BigInt, n: *mut TEE_BigInt);
}
extern "C" {
    pub fn TEE_BigIntExpMod(
        dest: *mut TEE_BigInt,
        op1: *mut TEE_BigInt,
        op2: *mut TEE_BigInt,
        n: *mut TEE_BigInt,
        context: *mut TEE_BigIntFMMContext,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_BigIntRelativePrime(op1: *mut TEE_BigInt, op2: *mut TEE_BigInt) -> bool;
}
extern "C" {
    pub fn TEE_BigIntComputeExtendedGcd(
        gcd: *mut TEE_BigInt,
        u: *mut TEE_BigInt,
        v: *mut TEE_BigInt,
        op1: *mut TEE_BigInt,
        op2: *mut TEE_BigInt,
    );
}
extern "C" {
    pub fn TEE_BigIntIsProbablePrime(op: *mut TEE_BigInt, confidenceLevel: u32) -> i32;
}
extern "C" {
    pub fn TEE_BigIntConvertToFMM(
        dest: *mut TEE_BigIntFMM,
        src: *mut TEE_BigInt,
        n: *mut TEE_BigInt,
        context: *mut TEE_BigIntFMMContext,
    );
}
